<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dodawanie_akwarium"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/tlo"
    tools:context="com.github.menf.smprojekt.NoweAkwariumActivity">

    <TextView
        android:text="@string/text_dodaj_akwarium"
        android:layout_marginTop="@dimen/top_margin"
        style="@style/naglowki"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:id="@+id/editTextSzerokosc"
        android:hint="@string/dodaj_szerokosc"
        style="@style/zwykly_tekst"
        android:layout_below="@+id/editTextWysokosc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/button_dodaj"
        style="@style/styl_button"
        android:backgroundTint="@color/kolor_buttona"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/buttonDodajAkwarium"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"
        android:layout_below="@+id/editTextDlugosc"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="29dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_marginTop="39dp"
        android:id="@+id/editTextDlugosc"
        android:hint="@string/dodaj_dlugosc"
        style="@style/zwykly_tekst"
        android:layout_below="@+id/editTextSzerokosc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="14dp"
        android:id="@+id/editTextWysokosc"
        android:hint="@string/dodaj_wysokosc"
        android:inputType="number"
        style="@style/zwykly_tekst"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
