<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dodawanie_rybki"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/tlo"
    tools:context="com.github.menf.smprojekt.EdytujRybkeActivity">

    <TextView
        android:text="@string/edytujrybke"
        android:textSize="@dimen/text_naglowek"
        style="@style/naglowki"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/top_margin"
        android:id="@+id/textView4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="11dp"
        android:id="@+id/editTextNazwa"
        android:hint="@string/nazwa"
        android:inputType="textPersonName"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/zwykly_tekst"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_marginTop="24dp"
        android:id="@+id/editTextWiek"
        android:hint="@string/wiek"
        android:layout_below="@+id/editTextNazwa"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/zwykly_tekst"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_marginTop="24dp"
        android:id="@+id/editTextIlosc"
        android:hint="@string/ilosc"
        android:layout_below="@+id/editTextWiek"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/zwykly_tekst"/>

    <Button
        android:text="@string/button_edytuj"
        style="@style/styl_button"
        android:backgroundTint="@color/kolor_buttona"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/buttonDodajRybke"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/editTextIlosc"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp" />
</RelativeLayout>
